--- a/PcHardwareNetwork/app/views/power_supplies/index.html.erb
+++ b/PcHardwareNetwork/app/views/power_supplies/index.html.erb
@@ -24,7 +24,7 @@
         <td><%= power_supply.name %></td>
         <td><%= power_supply.form_factor %></td>
         <td><%= power_supply.efficiency_rating %></td>
-        <td><%= power_supply.wattage %></td>
+        <td><%= power_supply.wattage %> W</td>
         <td><%= power_supply.modular %></td>
         <td><%= power_supply.color %></td>
         <td><%= power_supply.price %></td>
