--- a/PcHardwareNetwork/app/views/storages/index.html.erb
+++ b/PcHardwareNetwork/app/views/storages/index.html.erb
@@ -22,9 +22,9 @@
       <tr>
         <td><%= storage.brand %></td>
         <td><%= storage.name %></td>
-        <td><%= storage.capacity %></td>
+        <td><%= storage.capacity %> GB</td>
         <td><%= storage.type %></td>
-        <td><%= storage.cache %></td>
+        <td><%= storage.cache %> MB</td>
         <td><%= storage.form_factor %></td>
         <td><%= storage.interface %></td>
         <td><%= storage.price %></td>
