--- a/PcHardwareNetwork/app/views/memories/index.html.erb
+++ b/PcHardwareNetwork/app/views/memories/index.html.erb
@@ -22,10 +22,10 @@
         <td><%= memory.brand %></td>
         <td><%= memory.name %></td>
         <td><%= memory.speed %></td>
-        <td><%= memory.size %></td>
+        <td><%= memory.size %> GB</td>
         <td><%= memory.color %></td>
         <td><%= memory.cas_latency %></td>
-        <td><%= memory.price %></td>
+        <td>$<%= memory.price %></td>
         <td><%= link_to 'Show', memory %></td>
         <td><%= link_to 'Edit', edit_memory_path(memory) %></td>
         <td><%= link_to 'Destroy', memory, method: :delete, data: { confirm: 'Are you sure?' } %></td>
