--- a/PcHardwareNetwork/app/views/storages/_form.html.erb
+++ b/PcHardwareNetwork/app/views/storages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: storage) do |form| %>
+<%= bootstrap_form_with(model: storage) do |form| %>
   <% if storage.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(storage.errors.count, "error") %> prohibited this storage from being saved:</h2>
@@ -12,42 +12,34 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :brand %>
     <%= form.text_field :brand %>
   </div>
 
   <div class="field">
-    <%= form.label :name %>
     <%= form.text_field :name %>
   </div>
 
   <div class="field">
-    <%= form.label :capacity %>
     <%= form.number_field :capacity %>
   </div>
 
   <div class="field">
-    <%= form.label :type %>
     <%= form.text_field :type %>
   </div>
 
   <div class="field">
-    <%= form.label :cache %>
     <%= form.number_field :cache %>
   </div>
 
   <div class="field">
-    <%= form.label :form_factor %>
     <%= form.text_field :form_factor %>
   </div>
 
   <div class="field">
-    <%= form.label :interface %>
     <%= form.text_field :interface %>
   </div>
 
   <div class="field">
-    <%= form.label :price %>
     <%= form.number_field :price %>
   </div>
 
