--- a/PcHardwareNetwork/app/views/video_cards/_form.html.erb
+++ b/PcHardwareNetwork/app/views/video_cards/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: video_card) do |form| %>
+<%= bootstrap_form_with(model: video_card) do |form| %>
   <% if video_card.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(video_card.errors.count, "error") %> prohibited this video_card from being saved:</h2>
@@ -12,47 +12,38 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :brand %>
     <%= form.text_field :brand %>
   </div>
 
   <div class="field">
-    <%= form.label :name %>
     <%= form.text_field :name %>
   </div>
 
   <div class="field">
-    <%= form.label :chipset %>
     <%= form.text_field :chipset %>
   </div>
 
   <div class="field">
-    <%= form.label :memory %>
     <%= form.number_field :memory %>
   </div>
 
   <div class="field">
-    <%= form.label :core_clock %>
     <%= form.number_field :core_clock %>
   </div>
 
   <div class="field">
-    <%= form.label :boost_clock %>
     <%= form.number_field :boost_clock %>
   </div>
 
   <div class="field">
-    <%= form.label :color %>
     <%= form.text_field :color %>
   </div>
 
   <div class="field">
-    <%= form.label :length %>
     <%= form.number_field :length %>
   </div>
 
   <div class="field">
-    <%= form.label :price %>
     <%= form.number_field :price %>
   </div>
 
