--- a/PcHardwareNetwork/app/views/video_cards/index.html.erb
+++ b/PcHardwareNetwork/app/views/video_cards/index.html.erb
@@ -25,11 +25,11 @@
         <td><%= video_card.name %></td>
         <td><%= video_card.chipset %></td>
         <td><%= video_card.memory %></td>
-        <td><%= video_card.core_clock %></td>
-        <td><%= video_card.boost_clock %></td>
+        <td><%= video_card.core_clock %> MHz</td>
+        <td><%= video_card.boost_clock %> Mhz</td>
         <td><%= video_card.color %></td>
-        <td><%= video_card.length %></td>
-        <td><%= video_card.price %></td>
+        <td><%= video_card.length %> mm</td>
+        <td>$<%= video_card.price %></td>
         <td><%= link_to 'Show', video_card %></td>
         <td><%= link_to 'Edit', edit_video_card_path(video_card) %></td>
         <td><%= link_to 'Destroy', video_card, method: :delete, data: { confirm: 'Are you sure?' } %></td>
