--- a/PcHardwareNetwork/app/views/processors/index.html.erb
+++ b/PcHardwareNetwork/app/views/processors/index.html.erb
@@ -31,8 +31,10 @@
         <td><%= processor.smt %></td>
         <td>$<%= processor.price %></td>
         <td><%= link_to 'Show', processor %></td>
+        <% if current_user.admin %>
         <td><%= link_to 'Edit', edit_processor_path(processor) %></td>
         <td><%= link_to 'Destroy', processor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
