--- a/PcHardwareNetwork/app/views/cases/_form.html.erb
+++ b/PcHardwareNetwork/app/views/cases/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: case) do |form| %>
+<%= bootstrap_form_with(model: case) do |form| %>
   <% if case.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(case.errors.count, "error") %> prohibited this case from being saved:</h2>
