Added all foreign keys for the builds

--- a/PcHardwareNetwork/app/views/builds/_form.html.erb
+++ b/PcHardwareNetwork/app/views/builds/_form.html.erb
@@ -51,8 +51,8 @@
   </div>
     <br/>
     <div class="field">
-    <%= form.label :case_id %>
-    <%= select_tag(:case_id, options_for_select(@cases), :prompt => "Select a case") %>
+    <%= form.label :pc_case_id %>
+    <%= select_tag(:pc_case_id, options_for_select(@pc_cases), :prompt => "Select a case") %>
   </div>
     <br/>
   <div class="actions">
