--- a/PcHardwareNetwork/app/views/storages/index.html.erb
+++ b/PcHardwareNetwork/app/views/storages/index.html.erb
@@ -2,13 +2,13 @@
 
 <h1>Storages</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Brand</th>
       <th>Name</th>
       <th>Capacity</th>
-      <th>Type</th>
+      <th>Storage type</th>
       <th>Cache</th>
       <th>Form factor</th>
       <th>Interface</th>
@@ -22,9 +22,9 @@
       <tr>
         <td><%= storage.brand %></td>
         <td><%= storage.name %></td>
-        <td><%= storage.capacity %> GB</td>
-        <td><%= storage.type %></td>
-        <td><%= storage.cache %> MB</td>
+        <td><%= storage.capacity %></td>
+        <td><%= storage.storage_type %></td>
+        <td><%= storage.cache %></td>
         <td><%= storage.form_factor %></td>
         <td><%= storage.interface %></td>
         <td><%= storage.price %></td>
