--- a/PcHardwareNetwork/app/views/storages/show.html.erb
+++ b/PcHardwareNetwork/app/views/storages/show.html.erb
@@ -16,8 +16,8 @@
 </p>
 
 <p>
-  <strong>Type:</strong>
-  <%= @storage.type %>
+  <strong>Storage type:</strong>
+  <%= @storage.storage_type %>
 </p>
 
 <p>
