--- a/PcHardwareNetwork/app/views/storages/_form.html.erb
+++ b/PcHardwareNetwork/app/views/storages/_form.html.erb
@@ -24,7 +24,7 @@
   </div>
 
   <div class="field">
-    <%= form.text_field :type %>
+    <%= form.text_field :storage_type %>
   </div>
 
   <div class="field">
