--- a/PcHardwareNetwork/app/views/builds/edit.html.erb
+++ b/PcHardwareNetwork/app/views/builds/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Build</h1>
 
-
+<%= render 'form', build: @build %>
 
 <%= link_to 'Show', @builds %> |
 <%= link_to 'Back', builds_path %>
