--- a/PcHardwareNetwork/app/views/memories/index.html.erb
+++ b/PcHardwareNetwork/app/views/memories/index.html.erb
@@ -36,4 +36,8 @@
 
 <br>
 
+<div class="digg_pagination">
+  <%= will_paginate(@memories) %>
+</div>
+
 <%= link_to 'New Memory', new_memory_path %>
