--- a/PcHardwareNetwork/app/views/motherboards/index.html.erb
+++ b/PcHardwareNetwork/app/views/motherboards/index.html.erb
@@ -38,4 +38,8 @@
 
 <br>
 
+<div class="digg_pagination">
+  <%= will_paginate(@motherboards) %>
+</div>
+
 <%= link_to 'New Motherboard', new_motherboard_path %>
