--- a/PcHardwareNetwork/app/views/pc_cases/index.html.erb
+++ b/PcHardwareNetwork/app/views/pc_cases/index.html.erb
@@ -40,4 +40,8 @@
 
 <br>
 
+<div class="digg_pagination">
+  <%= will_paginate(@pc_cases) %>
+</div>
+
 <%= link_to 'New Pc Case', new_pc_case_path %>
