--- a/PcHardwareNetwork/app/views/processor_coolers/index.html.erb
+++ b/PcHardwareNetwork/app/views/processor_coolers/index.html.erb
@@ -36,4 +36,8 @@
 
 <br>
 
+<div class="digg_pagination">
+  <%= will_paginate(@processor_coolers) %>
+</div>
+
 <%= link_to 'New Processor Cooler', new_processor_cooler_path %>
