--- a/PcHardwareNetwork/app/views/video_cards/index.html.erb
+++ b/PcHardwareNetwork/app/views/video_cards/index.html.erb
@@ -40,4 +40,8 @@
 
 <br>
 
+<div class="digg_pagination">
+  <%= will_paginate(@video_cards) %>
+</div>
+
 <%= link_to 'New Video Card', new_video_card_path %>
