--- a/PcHardwareNetwork/app/views/builds/show.html.erb
+++ b/PcHardwareNetwork/app/views/builds/show.html.erb
@@ -5,6 +5,11 @@
     <%= @build.name %>
 </h1>
 
+<p>
+    <strong>Author: </strong>
+    <%= link_to @build.user.email, "/users/#{@build.user.id}" %>
+</p>
+
 <table class="table">
     <thead>
         <tr>
@@ -50,3 +55,32 @@
 </table>
 
 <h2 class="text-end"><strong>Total: </strong>$ <%= total_price(@build) %></h2>
+
+<div class="row">
+
+    <div class="col-md-8">
+        <h2>Comments</h2>
+
+        <div class="card">
+            <% @build.comments.each do |comment| %>
+            <div class="card-body">
+                <h4 class="text-left"><%= comment.user.email %></h4>
+                <p class="card-text"><%= comment.description %></p>
+                <p class="card-text text-end"><small class="text-muted">Last updated at: <%= comment.updated_at %></small></p>
+            </div>
+            <hr/>
+            <% end %>
+        </div>
+    </div>
+
+    <div class="col-md-4">
+        <br/>
+        <% if current_user %>
+            <%= render 'comments/form', comment: @comment, build: @build %>
+        <% else %>
+            <h3>You need to login to leave a comment</h3>
+            <%= link_to "Log in", new_user_session_path, class:"btn btn-lg btn-primary" %>
+        <% end %>
+    </div>
+
+</div>
