--- a/PcHardwareNetwork/app/views/power_supplies/index.html.erb
+++ b/PcHardwareNetwork/app/views/power_supplies/index.html.erb
@@ -38,4 +38,8 @@
 
 <br>
 
+<div class="digg_pagination">
+  <%= will_paginate(@power_supplies) %>
+</div>
+
 <%= link_to 'New Power Supply', new_power_supply_path %>
