--- a/PcHardwareNetwork/app/views/processors/index.html.erb
+++ b/PcHardwareNetwork/app/views/processors/index.html.erb
@@ -42,4 +42,8 @@
 
 <br>
 
+<div class="digg_pagination">
+  <%= will_paginate(@processors) %>
+</div>
+
 <%= link_to 'New Processor', new_processor_path, class:"btn" %>
