--- a/PcHardwareNetwork/app/views/storages/index.html.erb
+++ b/PcHardwareNetwork/app/views/storages/index.html.erb
@@ -38,4 +38,8 @@
 
 <br>
 
+<div class="digg_pagination">
+  <%= will_paginate(@storages) %>
+</div>
+
 <%= link_to 'New Storage', new_storage_path %>
