--- a/PcHardwareNetwork/app/views/users/index.html.erb
+++ b/PcHardwareNetwork/app/views/users/index.html.erb
@@ -1,5 +1,15 @@
 <h1>All users</h1>
 
-<% @users.each do |user| %>
-    <%= user.email %></br>
-<% end %>
+<div class="row">
+    <div class="col-md-5">
+        <ul class="list-group">
+        <% @users.each do |user| %>
+            <li class="list-group-item"><%= user.email %></li>
+        <% end %>
+        </ul>
+    </div>
+</div>
+<br/>
+<div class="digg_pagination">
+  <%= will_paginate(@users) %>
+</div>
