--- a/PcHardwareNetwork/app/views/processors/index.html.erb
+++ b/PcHardwareNetwork/app/views/processors/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Processors</h1>
 
 <table class="table">
@@ -40,10 +38,10 @@
   </tbody>
 </table>
 
-<br>
+<br/>
 
 <div class="digg_pagination">
   <%= will_paginate(@processors) %>
 </div>
-
-<%= link_to 'New Processor', new_processor_path, class:"btn" %>
+<br/>
+<%= link_to 'New Processor', new_processor_path, class:"btn btn-primary btn-sm" %>
