--- a/PcHardwareNetwork/app/views/memories/index.html.erb
+++ b/PcHardwareNetwork/app/views/memories/index.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 
 <h1>Memories</h1>
 
@@ -27,8 +26,10 @@
         <td><%= memory.cas_latency %></td>
         <td>$<%= memory.price %></td>
         <td><%= link_to 'Show', memory %></td>
+        <% if current_user && current_user.admin %>
         <td><%= link_to 'Edit', edit_memory_path(memory) %></td>
         <td><%= link_to 'Destroy', memory, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
