--- a/PcHardwareNetwork/app/views/motherboards/index.html.erb
+++ b/PcHardwareNetwork/app/views/motherboards/index.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 
 <h1>Motherboards</h1>
 
@@ -29,8 +28,10 @@
         <td><%= motherboard.color %></td>
         <td>$<%= motherboard.price %></td>
         <td><%= link_to 'Show', motherboard %></td>
+        <% if current_user && current_user.admin %>
         <td><%= link_to 'Edit', edit_motherboard_path(motherboard) %></td>
         <td><%= link_to 'Destroy', motherboard, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
